DREM-3084 【初回リリース】【Android】アプリ起動中にdアカウント設定アプリを削除した際に、時間経過させてもOTT取得を失敗した旨のダイアログが表示されず情報更新されない
　ワンタイムトークン取得の際、dアカウント設定アプリが未インストールか無効状態だった場合は、キャッシュをクリアしてダイアログを表示し、OKが押された場合はホーム画面に戻る処理を追加しました。

　また、今回の修正のテスト時に、ウェブクライアントでエラーが発生した際に、おすすめ番組・ビデオの画面でウェイト表示が消えなくなる件と、キャッシュクリア時のダウンロードコンテンツの削除時に、DBは既にクローズ済みと言う例外が発生する場合がある件を発見したので、対策を行いました。

Change-Id: Ic078538b4fbf86d09291e242a05070e08a5324cb

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -420,6 +420,7 @@
     <string name="d_account_network_error">dアカウントの処理に失敗しました（A-8）</string>
     <string name="d_account_internal_error">dアカウントの処理に失敗しました（A-9）</string>
     <string name="d_account_change_message">dアカウントが変更されたため、ホーム画面に戻ります</string>
+    <string name="d_account_deleted_message">dアカウントが変更されました</string>
 
     <!-- お知らせ -->
     <string name="information_title">お知らせ</string>
