DREM-3057 [不具合]【Android】キーワード検索で検索時通信失敗しても前回の件数が残る
Change-Id: Ief7c95685a1f340877233c69db5729859d3705a3

--- a/dTVTerminalApp/dasho/TVTerminal_test_signed.dox
+++ b/dTVTerminalApp/dasho/TVTerminal_test_signed.dox
@@ -24,6 +24,8 @@
         <classes name="com.nttdocomo.android.tvterminalapp.jni.activation.*"/>
         <classes name="com.nttdocomo.android.tvterminalapp.jni.download.*"/>
         <classes name="com.nttdocomo.android.tvterminalapp.jni.remote.*"/>
+        <classes name="com.nttdocomo.android.tvterminalapp.jni.hikari.*"/>
+        <classes name="com.nttdocomo.android.tvterminalapp.jni.rec.*"/>
     </globalProcessingExclude>
     <classpath appendrtjar="false">
         <pathelement location="${sdk.dir}\platforms\android-26\android.jar"/>
