DREM-3241 Googleアナリティクスに表示されるイベント名が異なる
Change-Id: I35b6261fb434e190a0ebcb7a825ea9b3f1fa13ea

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -532,7 +532,7 @@
     <string name="google_analytics_screen_name_contract">契約ページ</string>
 
     <!-- Google Analytics イベントカテゴリ -->
-    <string name="google_analytics_category_service_name_h4d">ひかりTV for DoCoMo</string>
+    <string name="google_analytics_category_service_name_h4d">ひかりTV for docomo</string>
     <string name="google_analytics_category_service_name_dtv">dTV</string>
     <string name="google_analytics_category_service_name_dtv_ch">dTVチャンネル</string>
     <string name="google_analytics_category_service_name_danime">dアニメ</string>
@@ -540,7 +540,7 @@
 
     <!-- Google Analytics イベントアクション -->
     <string name="google_analytics_category_action_watch_tv">テレビで視聴するをタップ</string>
-    <string name="google_analytics_category_action_h4d">ひかりTV for DoCoMoをタップ</string>
+    <string name="google_analytics_category_action_h4d">ひかりTV for docomoをタップ</string>
     <string name="google_analytics_category_action_dtv">dTVをタップ</string>
     <string name="google_analytics_category_action_dtv_ch">dTVチャンネルをタップ</string>
     <string name="google_analytics_category_action_danime">dアニメをタップ</string>
