DREM-193 <AOS> グローバルメニュー-アカウント名表示
Change-Id: I1893f22fff85bfe3d8eaf25d8e6bdb40fc5300fd

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -245,6 +245,7 @@
     <string name="now_on_air">NOW ON AIR</string>
 
     <!-- MenuDisplay -->
+    <string name="nav_menu_status_login_ng">未ログイン</string>
     <string name="nav_menu_item_home">ホーム</string>
     <string name="nav_menu_item_program_list">番組表</string>
     <string name="nav_menu_item_channel_list">チャンネルリスト</string>
