--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -200,7 +200,7 @@
     <string name="record_download_delete_title">削除しますか？</string>
     <string name="record_download_cancel_title">ダウンロードを取りやめますか？</string>
     <string name="record_download_cancel_confirm">取りやめる</string>
-    <string name="record_download_notification">録画番組をダウンロード中</string>
+    <string name="record_download_notification">録画番組をダウンロード中&#8230;</string>
     <string name="record_download_notification_channel_name">ダウンロード状況</string>
     <string name="record_download_not_completed_msg">録画コンテンツのダウンロードに失敗しました。\n再度録画一覧よりダウンロードを行ってください。</string>
     <string name="record_download_low_storage_space_msg">端末の容量が不足しているため、ダウンロードできません</string>
@@ -270,7 +270,7 @@
     <string name="nav_menu_item_premium_tv_app_start_common">テレビアプリを起動する</string>
 
     <!-- 検索画面 -->
-    <string name="search_loading">読み込み中...</string>
+    <string name="search_loading">読み込み中&#8230;</string>
 
     <!-- レンタル -->
     <string name="rental_title">レンタルビデオ</string>
