--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -297,7 +297,7 @@
     <string name="dtv_channel_service_update_dialog">dTVチャンネルアプリのアップデートが必要です</string>
     <string name="dtv_channel_service_application_not_install_dialog">dTVチャンネルアプリがインストールされていません。\nインストールしますか？</string>
     <string name="d_tv_terminal_application_version_update_dialog">ドコモテレビターミナルアプリのアップデートが必要です</string>
-    <string name="stb_application_version_update">ご利用のドコモテレビターミナルでアプリのアップデートが必要です。\nドコモテレビターミナルを起動し、設定＞ドコモサービス設定＞ドコモアプリ管理　から「ドコモテレビターミナルアプリ用アプリ」をアップデートしてください。</string>
+    <string name="stb_application_version_update">ご利用のドコモテレビターミナルでアプリのアップデートが必要です。\nドコモテレビターミナルを起動し、設定＞ドコモサービス設定＞ドコモアプリ管理から「ドコモテレビターミナル中継アプリ」をアップデートしてください。</string>
     <string name="contents_detail_thumbnail_text_no_pair">ドコモテレビターミナルに接続してください</string>
     <string name="contents_detail_thumbnail_text">テレビで視聴できます</string>
     <string name="contents_detail_thumbnail_text_unable_viewing">お使いの端末では視聴できません</string>
